# University-projects

./: README.md
Fourth Semester/: One Drive
Fourth Semester/Actividad1/: CMakeLists.txt
Fourth Semester/Actividad1/Custom/Minimum/: CMakeLists.txt  Minimum.hpp
Fourth Semester/Actividad1/Custom/Ordenar_inter/: CMakeLists.txt  Ordenar_inter.cpp  Ordenar_inter.hpp
Fourth Semester/Actividad1/Custom/Ordenar_selec/: CMakeLists.txt  Ordenar_selec.hpp
Fourth Semester/Actividad1/Custom/Rand_ag/: CMakeLists.txt  Rand_ag.cpp  Rand_ag.hpp
Fourth Semester/Actividad1/Ejercicio1/Test_insert_sort/: CMakeLists.txt  Test.cpp
Fourth Semester/Actividad1/Ejercicio1/Test_selec_sort/: CMakeLists.txt  Test.cpp
Fourth Semester/Actividad1/Ejercicio2/: CMakeLists.txt  Test.cpp
Fourth Semester/Actividad2/BinarySearch/: BinarySearch.java
Fourth Semester/Actividad2/Ejercicio1/: Test.java
Fourth Semester/Actividad2/Ejercicio2/: Test1.java  Test2.java
Fourth Semester/Actividad2/OrderAlgol/: QuickSort.java  SelectionSort.java
Fourth Semester/Actividad2/arch/: pom.xml
Second_Semester/actividad1/ejercicio1/: PseudoRandomArray.java
Second_Semester/actividad1/ejercicio2/: AppBanco.java  BancoImplementation.java
Second_Semester/actividad1/ejercicio3/: AppLibro.java  LibroImplementation.java
Seventh_Semester/: Process_interface.bpm
Seventh_Semester/Requirements Engineering/: README  SCRUMPROJECT.docx
Seventh_Semester/Software Engineering/: CasosdeUso.docx  DisenoPruebas2025.docx  README  RequisitosdeSoftware.docx
(+12 files in other folders)
